k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-eks-gitops
  labels:
    app: python-eks-gitops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: python-eks-gitops

  template:
    metadata:
      labels:
        app: python-eks-gitops

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: python-eks-gitops

          image: 755729228993.dkr.ecr.ap-south-1.amazonaws.com/python-eks-gitops:13bf885c4bea55d520a6c5a1a00238ab42bac2fd

          ports:
            - containerPort: 5000

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
