k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-eks-gitops
spec:
  type: LoadBalancer
  selector:
    app: python-eks-gitops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
